# pup

./: .gitignore  Cargo.toml  README.md  how-it-works.tldr  response  rustfmt.toml
.github/: build.yml  dependabot.yml
.github/workflows/: build.yml  ci.yml
script/: install.sh  uninstall.sh
src/: cli.rs  config.rs  echo.rs  encode.rs  file_type.rs  main.rs  manipulation.rs  match.rs  operation.rs  request.rs  response.rs  result.rs  symlink.rs  token.rs  util.rs
src/operation/: manipulation.rs  mod.rs  token.rs
src/util/: encode.rs  file_type.rs  mod.rs  request.rs  response.rs
