[package]
name = "pup"
description = """A command-line tool that automatically uploads images from the \
markdown document to the GitHub repo and replaces the paths with the returned URL
"""
version = "0.1.1"
edition = "2021"
authors = ["SteveLauC <stevelauc@outlook.com>"]
readme = "README.md"
license = "GPL-2.0-only"
categories = ["command-line-utilities"]
repository = "https://github.com/SteveLauC/pup"
keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]


[dependencies]
anyhow = "1.0.66"
arboard = "3.2.0"
base64 = "0.20.0"
clap = { version = "4.0.15", features = ["cargo"] }
colored = "2.0.0"
dirs = "5.0.0"
json = "0.12.4"
keyring = "1.2.0"
rayon = "1.6.1"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = {version = "1.0.150", features = ["derive"]}
serde_json = "1.0.79"
toml = "0.7.0"
termios = "0.3.3"
thiserror = "1.0.37"

[profile.release]
strip = true
