[package]
name = "pup"
description = """A command-line tool that automatically uploads images from the \
markdown document to the GitHub repo and replaces the paths with the returned URL
"""
version = "0.1.1"
edition = "2021"
authors = ["SteveLauC <stevelauc@outlook.com>"]
readme = "README.md"
license = "GPL-2.0-only"
categories = ["command-line-utilities"]
repository = "https://github.com/SteveLauC/pup"
keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]


[dependencies]
anyhow = "1.0.71"
arboard = "3.2.0"
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["cargo", "derive"] }
colored = "2.0.0"
dirs = "5.0.1"
json = "0.12.4"
keyring = "2.0.2"
rayon = "1.7.0"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
toml = "0.8.0"
termios = "0.3.3"
thiserror = "1.0.40"

[profile.release]
strip = true
