[package]
name = "pup"
description = """A command-line tool that automatically uploads images from the \
markdown document to the GitHub repo and replaces the paths with the returned URL
"""
version = "0.1.1"
edition = "2021"
authors = ["SteveLauC <stevelauc@outlook.com>"]
readme = "README.md"
license = "GPL-2.0-only"
categories = ["command-line-utilities"]
repository = "https://github.com/SteveLauC/pup"
keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]


[dependencies]
anyhow = "1.0.86"
arboard = "3.4.0"
base64 = "0.22.0"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
colored = "2.1.0"
dirs = "5.0.1"
keyring = "3.2.0"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
toml = "0.8.19"
termios = "0.3.3"
thiserror = "1.0.63"

[profile.release]
strip = true
